todo-app-project/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk-project
  name: todo-app-project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-project
  template:
    metadata:
      labels:
        app: todo-app-project
    spec:
      volumes:
        - name: todo-app-vol
          persistentVolumeClaim:
            claimName: todo-app-claim
      containers:
        - name: todo-app-project
          image: TODO_APP_IMAGE
          volumeMounts:
            - name: todo-app-vol
              mountPath: /usr/src/app/static/assets/images
