todo-app-project/todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-project
  name: todo-app-project-svc
spec:
  type: NodePort
  selector:
    app: todo-app-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
