todo-app-project/todo-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dwk-project
  name: todo-app-project-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-project-svc
                port:
                  number: 2345
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-app-backend-svc
                port:
                  number: 2345
